--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -144,7 +144,7 @@
 			</div>
 			<div class="row justify-content-center">
 				<section class="col">
-					<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+					<p>Darin E. Reyes is an interaction designer and immersive artist living in San Luis Obispo, California.</p>
 					<p>
 						<a href="../index.html">Work</a>
 						<a href="../about/index.html">About</a>
