Update project links

--- a/breathe/index.html
+++ b/breathe/index.html
@@ -124,7 +124,16 @@
 				<script async defer src="https://www.instagram.com/embed.js"></script> 
 				<i class="fa fa-caret-up" aria-hidden="true"></i>
 				<p class="caption">Animated promo for the Trek</p>
-				<div class="row"> <a class='button' href='../fishyflop/index.html'>Previous project: Fishy Flop</a> <a class='button' href='../gato/index.html'>Next project: Gato</a> </div>
+				<div class="tiles m-b-1">
+					<a class="tile-w-1 button m-b-0" href="../fishyflop/index.html">
+						Previous project:<br>
+						Fishy Flop
+					</a>
+					<a class="tile-w-1 button m-b-0" href="../gato/index.html">
+						Next project:<br>
+						Gato
+					</a>
+				</div>
 			</section>
 			<!-- InstanceEndEditable -->
 			</div>
