--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -137,8 +137,16 @@
 				<img src="images/10.jpg" alt="world 2 assets">
 				<i class="fa fa-caret-up" aria-hidden="true"></i>
 				<p class="caption">Many elements were designed to be seamlessly tiled.</p>
-      <div class="row">
-        <a class='button' href='../arirang/index.html'>Previous project: Arirang Visualization</a> <a class='button' href='../breathe/index.html'>Next project: Breathe California Rebranding</a> </div>
+				<div class="tiles m-b-1">
+					<a class="tile-w-1 button m-b-0" href="../arirang/index.html">
+						Previous project:<br>
+						Arirang Visualization
+					</a>
+					<a class="tile-w-1 button m-b-0" href="../breathe/index.html">
+						Next project:<br>
+						Breathe California Rebranding
+					</a>
+				</div>
     </section>
 			<!-- InstanceEndEditable -->
 			</div>
