--- a/gato/index.html
+++ b/gato/index.html
@@ -104,7 +104,16 @@
 				<p>It is meant to remind adults of what it was like to be small, and to have a stuffed companion. Young visitors have enjoyed climbing over the cat and cuddling with it while watching the projection. Some children have spent over an hour with the cat.</p>
 				<img src="images/gatoHero.gif" alt="projection imagery"> <i class="fa fa-caret-up" aria-hidden="true"></i>
 				<p class="caption">Imagery in the projection tells the story of twenty-something reconnecting with their childhood selves.</p>
-				<div class="row"> <a class='button' href='../breathe/index.html'>Previous project: Breathe California Rebranding</a> <a class='button' href='../shadowplay/index.html'>Next project: ShadowPlay</a></div>
+				<div class="tiles m-b-1">
+					<a class="tile-w-1 button m-b-0" href="../breathe/index.html">
+						Previous project:<br>
+						Breathe California Rebranding
+					</a>
+					<a class="tile-w-1 button m-b-0" href="../shadowplay/index.html">
+						Next project:<br>
+						ShadowPlay
+					</a>
+				</div>
 			</section>
 			<!-- InstanceEndEditable -->
 			</div>
