--- a/arirang/index.html
+++ b/arirang/index.html
@@ -103,7 +103,16 @@
 				<i class='fa fa-caret-up' aria-hidden='true'></i>
 				<p class='caption'>A video of the performance on June 10, 2016.</p>
 				<p>Joe had heard the folk song as a child, when his mother would hum it as she carried him on her back. The project gave us an opportunity to learn more about the song's history and significance, which helped us add meaning to the performance and visualization.</p>
-				<div class="row"> <a class='button col' href='../disquiet/index.html'>Previous project: DisQuiet Prototype</a> <a class='button col' href='../fishyflop/index.html'>Next project: Fishy Flop</a> </div>
+				<div class="tiles m-b-1">
+					<a class="tile-w-1 button m-b-0" href="../disquiet/index.html">
+						Previous project:<br>
+						DisQuiet Prototype
+					</a>
+					<a class="tile-w-1 button m-b-0" href="../fishyflop/index.html">
+						Next project:<br>
+						Fishy Flop
+					</a>
+				</div>
 			</section>
 			<!-- InstanceEndEditable -->
 			</div>
