--- a/disquiet/index.html
+++ b/disquiet/index.html
@@ -115,7 +115,12 @@
 				<p>This was the first project where I explored the intersections of music, design, code, and mental health. I continued this exploration in projects such as <a href="../gato/index.html">Gato</a>.</p>
 				<p><sup>1</sup>According to the Higher Education Research Institute at UCLA</p>
 				<p><sup>2</sup>According to the American College Health Association</p>
-				<div class="row"><a class='button' href='../arirang/index.html'>Next project: Arirang Visualization</a> </div>
+				<div class="tiles m-b-1">
+					<a class="tile-w-1 button m-b-0" href="../arirang/index.html">
+						Next project:<br>
+						Arirang Visualization
+					</a>
+				</div>
 			</section>
 			<!-- InstanceEndEditable -->
 			</div>
