--- a/shadowplay/index.html
+++ b/shadowplay/index.html
@@ -101,7 +101,12 @@
 				<div class='video video-16x9'>
 					<iframe src='https://player.vimeo.com/video/278603739' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div>
-				<div class="row"> <a class='button' href='../gato/index.html'>Previous project: Gato</a> </div>
+				<div class="tiles m-b-1">
+					<a class="tile-w-1 button m-b-0" href="../gato/index.html">
+						Previous project:<br>
+						Gato
+					</a>
+				</div>
 			</section>
 			<!-- InstanceEndEditable -->
 			</div>
