Fix dreamweaver errors

--- a/breathe/index.html
+++ b/breathe/index.html
@@ -72,7 +72,7 @@
 			<section class="col border-top">
 				<h1>Breathe California Rebranding</h1>
 				<p>Marketing materials for a local non-profit</p>
-				<img src='images/1.jpg'>
+				<img src="images/1.jpg" alt="An example image of the rebeanding">
 				<table>
 					<tr>
 						<td><h3>Client</h3></td>
