--- a/disquiet/index.html
+++ b/disquiet/index.html
@@ -72,11 +72,11 @@
 			<section class="col border-top">
 				<h1>DisQuiet Prototype</h1>
 				<p>Musical relaxation app for depression and anxiety</p>
-				<div class='video video-16x9'>
-					<iframe src='https://player.vimeo.com/video/165835870' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<div class="video video-16x9">
+					<iframe src="https://player.vimeo.com/video/165835870" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div>
-				<i class='fa fa-caret-up' aria-hidden='true'></i>
-				<p class='caption'>A video demo of the prototype</p>
+				<i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">A video demo of the prototype</p>
 				<table>
 					<tr>
 						<td><h3>Role</h3></td>
