--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -72,7 +72,7 @@
 			<section class="col border-top">
 				<h1>Fishy Flop</h1>
 				<p>UI and gameplay assets for a mobile game</p>
-				<img src='images/fishyFlopHero-large.gif'>
+				<img src="images/fishyFlopHero-large.gif" alt="An example image from the gameplay assets">
 				<table>
 					<tr>
 						<td>
@@ -106,7 +106,7 @@
 							<h3>Status</h3>
 						</td>
 						<td>
-							<p><a href='https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop'>Available for download from the Google Play Store</a></p>
+							<p><a href="https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop">Available for download from the Google Play Store</a></p>
 						</td>
 					</tr>
 				</table>
