--- a/gato/index.html
+++ b/gato/index.html
@@ -72,8 +72,8 @@
 			<section class="col border-top">
 				<h1>Gato</h1>
 				<p>Interactive installation for babies, children, and their caretakers</p>
-				<div class='video video-16x9'>
-					<iframe src='https://player.vimeo.com/video/243570108' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<div class="video video-16x9">
+					<iframe src="https://player.vimeo.com/video/243570108" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div>
 				<table>
 					<tr>
